Configured admin page for Rate model
Fixed Flake8 issues
Corrected manually a typo in the 5th migration and choices files, where "USD" was used instead of "Dollar" and "EUR" instead of "Euro"
Added a link to the admin page to the navbar
Added verbose_name attribute to all parameters of the Rate model, without creating a new migration
Installed some Django extensions for the admin
Made some minor changes to requirements.txt and Makefile

--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,8 @@ ipython
 django-phonenumber-field
 phonenumbers
 django-debug-toolbar
+django-admin-rangefilter
+django-import-export
 
 # flake8
 flake8
