Added throttlers and renderers
Added default throttlers as well as custom for currency app
Added XML and YAML renderers support for all apps and endpoints

--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,10 @@ djangorestframework
 djangorestframework-simplejwt
 drf-yasg
 
+# REST API renderers
+djangorestframework-xml
+djangorestframework-yaml
+
 # Storage and File Handling
 boto3
 django-storages
