--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -33,6 +33,7 @@ jobs:
         with:
           python-version: "3.8"
       - name: Install dependencies
+        working-directory: ./
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements_git_actions.txt
