--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -40,5 +40,5 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements_git_actions.txt
       - name: Test with pytest
-        working-directory: ./app
-        run: pytest
+        working-directory: ./
+        run: pytest ./app
