--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -38,7 +38,7 @@ jobs:
         working-directory: ./
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements_git_actions.txt
+          pip install -r requirements.txt
       - name: Test with pytest
         working-directory: ./
         run: pytest ./app
