--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -41,7 +41,7 @@ jobs:
         working-directory: ./
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements_git_actions.txt
+          pip install -r requirements.txt
       - name: Test with pytest
         working-directory: ./
         run: pytest ./app/tests --cov=app --cov-report html && coverage report --fail-under=80
