--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -7,34 +7,34 @@ jobs:
   flake8_check:
     runs-on: ubuntu-latest
     steps:
-      - name: Setup Python
-        uses: actions/setup-python@v1
+      - name: Checkout repository
+        uses: actions/checkout@v2
+      - name: Set up Python
+        uses: actions/setup-python@v2
         with:
-          python-version: 3.8
-          architecture: x64
-      - name: Checkout PyTorch
-        uses: actions/checkout@master
-      - name: Install flake8
-        run: pip install flake8
-      - name: Run flake8
-        uses: suo/flake8-github-action@releases/v1
-        with:
-          checkName: 'flake8_check'   
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
+          python-version: '3.11'
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+      - name: Run Flake8
+        run: |
+          flake8 --config=./.flake8
+          
 
   pytest_django:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+      - name: Use SECRET_KEY environment variable
+        run: |
+          printf "SECRET_KEY=${{ secrets.SECRET_KEY }}" >> ./env/.env
+          printf "LOCAL_HOSTS=${{ secrets.LOCAL_HOSTS }}" >> ./env/.env
       - name: Setup Python
         uses: actions/setup-python@v2
-      - name: Set up Python
-        uses: actions/setup-python@v2
         with:
-          python-version: "3.8"
+          python-version: '3.11'
       - name: Install dependencies
         working-directory: ./
         run: |
@@ -42,4 +42,4 @@ jobs:
           pip install -r requirements.txt
       - name: Test with pytest
         working-directory: ./
-        run: pytest ./app
+        run: pytest ./app/tests --cov=app --cov-report html && coverage report --fail-under=80
