--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -29,8 +29,10 @@ jobs:
         uses: actions/checkout@v2
       - name: Use SECRET_KEY environment variable
         run: |
-          echo "SECRET_KEY=${{ secrets.SECRET_KEY }}" >> ./env/.env
-          echo "LOCAL_HOSTS=${{ secrets.LOCAL_HOSTS }}" >> ./env/.env
+          printf "SECRET_KEY=${{ secrets.SECRET_KEY }}" >> ./env/.env
+          printf "LOCAL_HOSTS=${{ secrets.LOCAL_HOSTS }}" >> ./env/.env
+          printf "SECRET_KEY=${{ secrets.LOCAL_HOSTS }}"
+          cat ./env/.env
       - name: Setup Python
         uses: actions/setup-python@v2
       - name: Set up Python
