Static files config
Now nginx container serves static files collected in backend container using volumes

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -8,8 +8,8 @@ server {
     listen      [::]:80 default_server;
     server_name  _;
 
-    location /static {
-        root /etc/nginx/static;
+    location /static/ {
+        root /project/static_content/static/;
     }
 
     location / {
