--- a/docker/docker-compose-dev.yml
+++ b/docker/docker-compose-dev.yml
@@ -1,13 +1,14 @@
-version: "3.9"
+version: "1.0"
 
 
 services:
   backend:
+    command: python app/manage.py runserver 0.0.0.0:8000
     image: backend_img
     build:
       context: ..
       dockerfile: docker/Dockerfile
-    container_name: currency_backend
+    container_name: backend
     stdin_open: true
     tty: true
     ports:
@@ -16,6 +17,8 @@ services:
       - postgres
       - memcached
       - rabbitmq
+    volumes:
+      - static:/project/static_content/static
 
   celery_common_worker:
     command: celery -A settings worker -l info --autoscale=0,2
@@ -92,6 +95,8 @@ services:
       - "80:80"
     volumes:
       - "../nginx/default.conf:/etc/nginx/conf.d/default.conf:ro"
+      - static:/project/static_content/static
 
 volumes:
   db_data: {}
+  static:
