--- a/docker/docker-compose-dev.yml
+++ b/docker/docker-compose-dev.yml
@@ -1,4 +1,4 @@
-version: "1.0"
+version: "3.9"
 
 
 services:
@@ -96,6 +96,26 @@ services:
     volumes:
       - "../nginx/default.conf:/etc/nginx/conf.d/default.conf:ro"
       - static:/project/static_content/static
+
+  pgadmin:
+    image: dpage/pgadmin4
+    container_name: pgadmin
+    depends_on:
+      - postgres
+    env_file: ../env/.env
+    ports:
+      - "5050:80"
+
+  flower:
+    command: celery -A settings flower
+    image: backend_img
+    container_name: flower
+    depends_on:
+      - celery_beat
+      - celery_common_worker
+      - celery_beat_worker
+    ports:
+      - "5555:5555"
 
 volumes:
   db_data: {}
