--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,8 +1,9 @@
-version: "1.0"
+version: "3.9"
 
 
 services:
   backend:
+    command: python app/manage.py runserver 0.0.0.0:8000
     image: backend_img
     build:
       context: ..
@@ -16,9 +17,8 @@ services:
       - postgres
       - memcached
       - rabbitmq
-      - celery_beat_worker
-      - celery_common_worker
-      - celery_beat
+    volumes:
+      - static:/project/static_content/static
 
   celery_common_worker:
     command: celery -A settings worker -l info --autoscale=0,2
@@ -30,6 +30,8 @@ services:
     stdin_open: true
     tty: true
     depends_on:
+      - postgres
+      - memcached
       - rabbitmq
 
   celery_beat_worker:
@@ -42,6 +44,8 @@ services:
     stdin_open: true
     tty: true
     depends_on:
+      - postgres
+      - memcached
       - rabbitmq
 
   celery_beat:
@@ -54,6 +58,8 @@ services:
     stdin_open: true
     tty: true
     depends_on:
+      - postgres
+      - memcached
       - rabbitmq
 
   memcached:
@@ -79,6 +85,28 @@ services:
       - "80:80"
     volumes:
       - "../nginx/default.conf:/etc/nginx/conf.d/default.conf:ro"
+      - static:/project/static_content/static
+
+  pgadmin:
+    image: dpage/pgadmin4
+    container_name: pgadmin
+    depends_on:
+      - postgres
+    env_file: ../env/.env
+    ports:
+      - "5050:80"
+
+  flower:
+    command: celery -A settings flower
+    image: backend_img
+    container_name: flower
+    depends_on:
+      - celery_beat
+      - celery_common_worker
+      - celery_beat_worker
+    ports:
+      - "5555:5555"
 
 volumes:
   db_data: {}
+  static:
