Changed mixins structure
Mixins are separated into two separate files to avoid circular imports
Changes to signals, models, forms and views of affected models
Provided example of local settings - local_sample.py
Minor changes to flake8 configs and gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,18 @@
+# Dirs
 .idea
 .pytest_cache
-.coverage
 venv
 __pycache__
+
+# Config files
+.coverage
+.env
+config.ini
+
+# DB
 *.sqlite3
 *.db
-config.ini
-.env
+
+# Other files with potentially sensitive data
 *.csv
+**/local.py
