Added RequestReqsponseLog model tests
Added tests of pagination and custom template tags
Minor changes to fixtures and django-pytest configs
Refactoring of existing tests

--- a/.coveragerc
+++ b/.coveragerc
@@ -6,10 +6,9 @@ omit = */tests.py
        */management/*
        */asgi.py
        */wsgi.py
-       */settings*.py
+       */settings/*.py
        */local_sample.py
        */app/manage.py
-       */bs4_parser/*.py
 
 [report]
 precision = 4
